# ECS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: Archetype.cpp  Archetype.h  Component.cpp  Component.h  EntityWorld.cpp  EntityWorld.h  speedTest.cpp
src/tests/: main.cpp  test.cc
